--- a/project/app/src/main/res/layout/color_option.xml
+++ b/project/app/src/main/res/layout/color_option.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.iven.potatowallpapers.CircleView
+<com.iven.potatowalls.CircleView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="@android:dimen/app_icon_size"
         android:layout_height="@android:dimen/app_icon_size"
         android:minHeight="@android:dimen/app_icon_size"
         android:layout_margin="2dp"
-        android:elevation="2dp"/>
+        android:id="@+id/circle_view" android:elevation="2dp"/>
