--- a/project/app/src/main/res/menu/bottom_menu.xml
+++ b/project/app/src/main/res/menu/bottom_menu.xml
@@ -6,7 +6,7 @@
     <item
             android:id="@+id/app_bar_info"
             android:icon="@drawable/ic_info"
-            android:title="@string/title_info"
+            android:title="@string/versionName"
             app:showAsAction="ifRoom"/>
 
     <item
