--- a/project/app/src/main/res/layout/background_card.xml
+++ b/project/app/src/main/res/layout/background_card.xml
@@ -16,7 +16,7 @@
             android:foreground="?android:attr/selectableItemBackgroundBorderless"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:onClick="startBackgroundPicker"
+            android:onClick="startBackgroundColorPicker"
             android:layout_height="wrap_content">
 
         <TextView android:layout_width="match_parent"
@@ -35,4 +35,16 @@
                   android:paddingEnd="16dp"
                   android:textAppearance="@android:style/TextAppearance.Material.Subhead"/>
     </LinearLayout>
+
+    <ImageButton
+            android:contentDescription="@string/live_wallpaper_name"
+            android:layout_width="@android:dimen/app_icon_size"
+            android:layout_height="@android:dimen/app_icon_size"
+            android:minHeight="@android:dimen/app_icon_size"
+            android:layout_gravity="end|center"
+            android:layout_margin="8dp"
+            android:id="@+id/background_system_accent"
+            android:onClick="setSystemAccentForBackground"
+            android:background="?android:attr/actionBarItemBackground"
+            android:src="@drawable/ic_theme_accent"/>
 </com.google.android.material.card.MaterialCardView>
