--- a/project/app/src/main/res/layout/potato_card.xml
+++ b/project/app/src/main/res/layout/potato_card.xml
@@ -12,7 +12,7 @@
 
     <LinearLayout
             android:foreground="?android:attr/selectableItemBackgroundBorderless"
-            android:onClick="startPotatoPicker"
+            android:onClick="startPotatoColorPicker"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -33,5 +33,17 @@
                   android:id="@+id/potato_color_subhead"
                   android:textAppearance="@android:style/TextAppearance.Material.Subhead"/>
     </LinearLayout>
+
+    <ImageButton
+            android:contentDescription="@string/live_wallpaper_name"
+            android:layout_width="@android:dimen/app_icon_size"
+            android:layout_height="@android:dimen/app_icon_size"
+            android:minHeight="@android:dimen/app_icon_size"
+            android:layout_gravity="end|center"
+            android:layout_margin="8dp"
+            android:id="@+id/potato_system_accent"
+            android:onClick="setSystemAccentForPotato"
+            android:background="?android:attr/actionBarItemBackground"
+            android:src="@drawable/ic_theme_accent"/>
 
 </com.google.android.material.card.MaterialCardView>
