--- a/project/app/src/main/res/values/colors.xml
+++ b/project/app/src/main/res/values/colors.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="defaultBackgroundColor">#292E33</color>
-    <color name="defaultPotatoColor">#8C9EFF</color>
+    <color name="default_background_color">#292E33</color>
+    <color name="default_potato_color">#8C9EFF</color>
 
-    <color name="bottomBarColor">#FAFAFA</color>
-    <color name="systemBarsColor">#BFBFBF</color>
-    <color name="activityBackground">#FFFFFF</color>
+    <color name="bottom_bar_color">#FAFAFA</color>
+    <color name="system_bars_color">#BFBFBF</color>
+    <color name="activity_background">#FFFFFF</color>
 
-    <color name="bottomBarColorDark">#303030</color>
-    <color name="systemBarsColorDark">#313131</color>
-    <color name="activityBackgroundDark">#424242</color>
+    <color name="bottom_bar_color_dark">#303030</color>
+    <color name="system_bars_color_dark">#313131</color>
+    <color name="activity_background_dark">#424242</color>
 
     <color name="dark_mode_text">#99000000</color>
     <color name="light_mode_text">#E5FFFFFF</color>
 
     <!--  PRESETS -->
 
-    <color name="midnightBlue">#1E1F26</color>
+    <color name="midnight_blue">#1E1F26</color>
     <color name="ink">#283655</color>
-    <color name="lightBlueBerry">#4D648D</color>
+    <color name="light_blue_berry">#4D648D</color>
 
-    <color name="darkNavy">#011A27</color>
-    <color name="blueBerry">#063852</color>
+    <color name="dark_navy">#011A27</color>
+    <color name="blue_berry">#063852</color>
     <color name="daffodil">#E6DF44</color>
 
     <color name="shadow">#2A3132</color>
@@ -31,13 +31,13 @@
     <color name="crevice">#46211A</color>
     <color name="desert">#BA5536</color>
 
-    <color name="deepAqua">#003B46</color>
+    <color name="deep_aqua">#003B46</color>
     <color name="wave">#66A5AD</color>
 
-    <color name="blueBlack">#021C1E</color>
+    <color name="blue_black">#021C1E</color>
     <color name="rain">#2C7873</color>
 
-    <color name="bluePine">#324851</color>
+    <color name="blue_pine">#324851</color>
     <color name="reflection">#34675C</color>
 
     <color name="cocoa">#301B28</color>
@@ -49,8 +49,8 @@
     <color name="ceramic">#CDCDC0</color>
     <color name="latte">#DDBC95</color>
 
-    <color name="eggPlant">#50312F</color>
-    <color name="lemonLime">#E4EA8C</color>
+    <color name="egg_plant">#50312F</color>
+    <color name="lemon_lime">#E4EA8C</color>
 
     <color name="cloud">#505160</color>
     <color name="moss">#AEBD38</color>
@@ -68,7 +68,7 @@
     <color name="poppy">#F98866</color>
 
     <color name="turquoise">#5BC8AC</color>
-    <color name="pinkTulip">#F18D9E</color>
+    <color name="pink_tulip">#F18D9E</color>
 
     <color name="branch">#5D535E</color>
     <color name="berry">#EC96A4</color>
