--- a/project/app/src/main/res/layout/background_card.xml
+++ b/project/app/src/main/res/layout/background_card.xml
@@ -8,7 +8,10 @@
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/default_background_color"
         android:elevation="16dp"
-        android:layout_margin="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         app:cardCornerRadius="16dp"
         tools:context=".PotatoActivity">
 
@@ -23,16 +26,19 @@
                   android:layout_height="wrap_content"
                   android:text="@string/title_background"
                   android:padding="16dp"
-                  android:id="@+id/background_color_head"
-                  android:textAppearance="@android:style/TextAppearance.Material.Headline"/>
+                  android:textSize="20sp"
+                  android:textStyle="bold"
+                  android:textAppearance="@android:style/TextAppearance.Material.Headline"
+                  android:id="@+id/background_color_head"/>
 
         <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/title_background"
                   android:id="@+id/background_color_subhead"
-                  android:paddingBottom="16dp"
+                  android:paddingBottom="8dp"
                   android:paddingStart="16dp"
                   android:paddingEnd="16dp"
+                  android:alpha="0.5"
                   android:textAppearance="@android:style/TextAppearance.Material.Subhead"/>
     </LinearLayout>
 
@@ -43,6 +49,7 @@
             android:minHeight="@android:dimen/app_icon_size"
             android:layout_gravity="end|center"
             android:layout_margin="8dp"
+            android:alpha="0.5"
             android:id="@+id/background_system_accent"
             android:onClick="setSystemAccentForBackground"
             android:background="?android:attr/actionBarItemBackground"
