--- a/project/app/src/main/res/layout/background_card.xml
+++ b/project/app/src/main/res/layout/background_card.xml
@@ -25,10 +25,12 @@
         <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/title_background"
-                  android:padding="16dp"
+                  android:paddingTop="8dp"
+                  android:paddingBottom="8dp"
+                  android:paddingStart="16dp"
+                  android:paddingEnd="16dp"
                   android:textSize="20sp"
                   android:textStyle="bold"
-                  android:textAppearance="@android:style/TextAppearance.Material.Headline"
                   android:id="@+id/background_color_head"/>
 
         <TextView android:layout_width="match_parent"
@@ -38,8 +40,7 @@
                   android:paddingBottom="8dp"
                   android:paddingStart="16dp"
                   android:paddingEnd="16dp"
-                  android:alpha="0.5"
-                  android:textAppearance="@android:style/TextAppearance.Material.Subhead"/>
+                  android:textAppearance="@android:style/TextAppearance.Material.Small"/>
     </LinearLayout>
 
     <ImageButton
