--- a/project/app/src/main/res/layout/cards_layout.xml
+++ b/project/app/src/main/res/layout/cards_layout.xml
@@ -3,7 +3,14 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_marginTop="16dp" android:layout_height="match_parent">
+        android:layout_height="match_parent">
+
+    <TextView android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:text="@string/potato_header"
+              android:textColor="?attr/potato_header_color"
+              android:padding="28dp"
+              android:textSize="48sp"/>
 
     <include layout="@layout/background_card"/>
 
