--- a/project/app/src/main/res/layout/presets_card.xml
+++ b/project/app/src/main/res/layout/presets_card.xml
@@ -6,7 +6,7 @@
         app:cardCornerRadius="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="?attr/bottom_bar_color"
+        app:cardBackgroundColor="?attr/presets_card_color"
         android:elevation="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -22,7 +22,7 @@
                   android:text="@string/title_presets"
                   android:textColor="?attr/presets_text_color"
                   android:paddingTop="8dp"
-                  android:paddingBottom="8dp"
+                  android:paddingBottom="4dp"
                   android:paddingStart="16dp"
                   android:paddingEnd="16dp"
                   android:textSize="20sp"
