--- a/project/app/src/main/res/layout/cards_layout.xml
+++ b/project/app/src/main/res/layout/cards_layout.xml
@@ -1,21 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
-    <TextView android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:text="@string/potato_header"
-              android:textColor="?attr/potato_header_color"
-              android:padding="28dp"
-              android:textSize="48sp"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <include layout="@layout/background_card"/>
+        <TextView android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:text="@string/potato_header"
+                  android:textColor="?attr/potato_header_color"
+                  android:padding="32dp"
+                  android:textSize="56sp"/>
 
-    <include layout="@layout/potato_card"/>
+        <include layout="@layout/background_card"/>
 
-    <include layout="@layout/presets_card"/>
+        <include layout="@layout/potato_card"/>
 
-</LinearLayout>
+        <include layout="@layout/presets_card"/>
+    </LinearLayout>
+
+    <ImageView
+            android:contentDescription="@string/live_wallpaper_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/posp_logo"
+            android:padding="16dp"
+            android:src="@drawable/ic_potato_full"
+            android:layout_gravity="start|bottom"/>
+</FrameLayout>
+
+
