--- a/project/app/src/main/res/layout/background_card.xml
+++ b/project/app/src/main/res/layout/background_card.xml
@@ -8,8 +8,7 @@
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/default_background_color"
         android:elevation="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="8dp"
         app:cardCornerRadius="16dp"
         tools:context=".PotatoActivity">
@@ -26,8 +25,7 @@
                   android:text="@string/title_background"
                   android:paddingTop="8dp"
                   android:paddingBottom="4dp"
-                  android:paddingStart="16dp"
-                  android:paddingEnd="16dp"
+                  android:paddingHorizontal="16dp"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:id="@+id/background_color_head"/>
@@ -37,8 +35,7 @@
                   android:text="@string/title_background"
                   android:id="@+id/background_color_subhead"
                   android:paddingBottom="8dp"
-                  android:paddingStart="16dp"
-                  android:paddingEnd="16dp"
+                  android:paddingHorizontal="16dp"
                   android:textAppearance="@android:style/TextAppearance.Material.Small"/>
     </LinearLayout>
 
