--- a/project/app/src/main/res/layout/potato_card.xml
+++ b/project/app/src/main/res/layout/potato_card.xml
@@ -8,8 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/default_potato_color" android:elevation="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="8dp"
         tools:context=".PotatoActivity">
 
@@ -26,8 +25,7 @@
                   android:id="@+id/potato_color_head"
                   android:paddingTop="8dp"
                   android:paddingBottom="4dp"
-                  android:paddingStart="16dp"
-                  android:paddingEnd="16dp"
+                  android:paddingHorizontal="16dp"
                   android:textSize="20sp"
                   android:textStyle="bold"/>
 
