--- a/project/app/src/main/res/layout/presets_card.xml
+++ b/project/app/src/main/res/layout/presets_card.xml
@@ -8,8 +8,7 @@
         android:layout_height="wrap_content"
         app:cardBackgroundColor="?attr/presets_card_color"
         android:elevation="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginHorizontal="16dp"
         tools:context=".PotatoActivity">
 
     <LinearLayout
@@ -23,8 +22,7 @@
                   android:textColor="?attr/presets_text_color"
                   android:paddingTop="8dp"
                   android:paddingBottom="4dp"
-                  android:paddingStart="16dp"
-                  android:paddingEnd="16dp"
+                  android:paddingHorizontal="16dp"
                   android:textSize="20sp"
                   android:textStyle="bold"/>
 
