--- a/project/app/src/main/res/layout/presets_card.xml
+++ b/project/app/src/main/res/layout/presets_card.xml
@@ -32,6 +32,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="8dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
                 tools:context=".MainActivity"/>
     </LinearLayout>
 
