--- a/project/app/src/main/res/layout/color_option.xml
+++ b/project/app/src/main/res/layout/color_option.xml
@@ -4,5 +4,7 @@
         android:layout_width="40sp"
         android:layout_height="40sp"
         android:minHeight="40sp"
-        android:layout_margin="2dp"
-        android:id="@+id/circle_view" android:elevation="2dp"/>
+        android:layout_marginVertical="8dp"
+        android:layout_marginHorizontal="4dp"
+        android:id="@+id/circle_view"
+        android:elevation="2dp"/>
