--- a/project/app/src/main/res/layout/background_card.xml
+++ b/project/app/src/main/res/layout/background_card.xml
@@ -4,13 +4,15 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/background_color"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/default_background_color"
-        android:elevation="16dp"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="8dp"
-        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginVertical="8dp"
+        app:cardCornerRadius="8dp"
         tools:context=".PotatoActivity">
 
     <LinearLayout
@@ -34,20 +36,21 @@
                   android:layout_height="wrap_content"
                   android:text="@string/title_background"
                   android:id="@+id/background_color_subhead"
-                  android:paddingBottom="8dp"
                   android:paddingHorizontal="16dp"
                   android:textAppearance="@android:style/TextAppearance.Material.Small"/>
+
+        <com.google.android.material.chip.Chip
+                android:id="@+id/background_system_accent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginVertical="16dp"
+                app:chipStrokeWidth="1dp"
+                android:onClick="setSystemAccentForBackground"
+                android:textAppearance="@style/chipTextAppearance"
+                android:text="@string/title_accent_me"/>
+        <!--app:chipIcon="@drawable/baseline_brightness_5_black_24"-->
     </LinearLayout>
 
-    <ImageButton
-            android:contentDescription="@string/live_wallpaper_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center"
-            android:padding="16dp"
-            android:alpha="0.5"
-            android:id="@+id/background_system_accent"
-            android:onClick="setSystemAccentForBackground"
-            android:background="?android:attr/actionBarItemBackground"
-            android:src="@drawable/ic_theme_accent"/>
+
 </com.google.android.material.card.MaterialCardView>
