--- a/project/app/src/main/res/layout/cards_layout.xml
+++ b/project/app/src/main/res/layout/cards_layout.xml
@@ -3,21 +3,34 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
+    <TextView android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:text="@string/potato_header"
+              android:textColor="?attr/potato_header_color"
+              android:layout_marginTop="32dp"
+              android:layout_marginStart="32dp"
+              android:layout_marginEnd="32dp"
+              android:layout_gravity="top|center"
+              android:textSize="64sp"/>
+
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_gravity="center"
+            android:layout_height="wrap_content">
 
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:text="@string/potato_header"
-                  android:textColor="?attr/potato_header_color"
-                  android:padding="24dp"
-                  android:textSize="58sp"/>
 
-        <include layout="@layout/background_card"/>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-        <include layout="@layout/potato_card"/>
+            <include layout="@layout/background_card"/>
+
+            <include layout="@layout/potato_card"/>
+
+        </LinearLayout>
+
 
         <include layout="@layout/presets_card"/>
     </LinearLayout>
