--- a/project/app/src/main/res/layout/potato_card.xml
+++ b/project/app/src/main/res/layout/potato_card.xml
@@ -3,13 +3,17 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:cardCornerRadius="16dp"
+        app:cardCornerRadius="8dp"
         android:id="@+id/potato_color"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/default_potato_color" android:elevation="16dp"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        app:cardElevation="4dp"
+        android:layout_marginVertical="8dp"
+        android:layout_marginEnd="16dp"
+
         tools:context=".PotatoActivity">
 
     <LinearLayout
@@ -32,23 +36,21 @@
         <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/title_potato"
-                  android:paddingBottom="8dp"
-                  android:paddingStart="16dp"
-                  android:paddingEnd="16dp"
+                  android:paddingHorizontal="16dp"
                   android:id="@+id/potato_color_subhead"
                   android:textAppearance="@android:style/TextAppearance.Material.Small"/>
+
+        <com.google.android.material.chip.Chip
+                android:id="@+id/potato_system_accent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginVertical="16dp"
+                android:onClick="setSystemAccentForPotato"
+                app:chipStrokeWidth="1dp"
+                android:textAppearance="@style/chipTextAppearance"
+                android:text="@string/title_accent_me"/>
     </LinearLayout>
 
-    <ImageButton
-            android:contentDescription="@string/live_wallpaper_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center"
-            android:padding="16dp"
-            android:id="@+id/potato_system_accent"
-            android:onClick="setSystemAccentForPotato"
-            android:alpha="0.5"
-            android:background="?android:attr/actionBarItemBackground"
-            android:src="@drawable/ic_theme_accent"/>
 
 </com.google.android.material.card.MaterialCardView>
