--- a/project/app/src/main/res/layout/presets_card.xml
+++ b/project/app/src/main/res/layout/presets_card.xml
@@ -3,12 +3,14 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:cardCornerRadius="16dp"
+        app:cardCornerRadius="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="?attr/presets_card_color"
-        android:elevation="16dp"
+        app:cardElevation="4dp"
+        android:padding="4dp"
         android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="8dp"
         tools:context=".PotatoActivity">
 
     <LinearLayout
@@ -28,8 +30,10 @@
         <!-- COLORS OPTIONS -->
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/colors_rv"
+                android:clipToPadding="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 tools:context=".MainActivity"/>
     </LinearLayout>
 
