--- a/project/app/src/main/res/layout/potato_card.xml
+++ b/project/app/src/main/res/layout/potato_card.xml
@@ -48,6 +48,8 @@
                 android:layout_marginVertical="16dp"
                 android:onClick="setSystemAccentForPotato"
                 app:chipStrokeWidth="1dp"
+                android:alpha="0.5"
+                android:textColor="@color/bottom_bar_color"
                 app:chipBackgroundColor="@color/activity_background_color_dark"
                 android:textAppearance="@style/chipTextAppearance"
                 android:text="@string/title_accent_me"/>
