--- a/project/app/src/main/res/layout/potato_card.xml
+++ b/project/app/src/main/res/layout/potato_card.xml
@@ -8,7 +8,7 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/default_potato_color" android:elevation="16dp"
+        app:cardBackgroundColor="@color/default_potato_color"
         android:layout_marginStart="8dp"
         app:cardElevation="4dp"
         android:layout_marginVertical="8dp"
