--- a/project/app/src/main/res/layout/background_card.xml
+++ b/project/app/src/main/res/layout/background_card.xml
@@ -28,7 +28,7 @@
                   android:paddingTop="8dp"
                   android:paddingBottom="4dp"
                   android:paddingHorizontal="16dp"
-                  android:textSize="20sp"
+                  android:textAppearance="@android:style/TextAppearance.Material.Title"
                   android:textStyle="bold"
                   android:id="@+id/background_color_head"/>
 
