--- a/project/app/src/main/res/layout/potato_card.xml
+++ b/project/app/src/main/res/layout/potato_card.xml
@@ -29,7 +29,7 @@
                   android:paddingTop="8dp"
                   android:paddingBottom="4dp"
                   android:paddingHorizontal="16dp"
-                  android:textSize="20sp"
+                  android:textAppearance="@android:style/TextAppearance.Material.Title"
                   android:textStyle="bold"/>
 
         <TextView android:layout_width="match_parent"
