--- a/project/app/src/main/res/layout/vector_color_pref_card.xml
+++ b/project/app/src/main/res/layout/vector_color_pref_card.xml
@@ -4,48 +4,50 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         app:cardCornerRadius="8dp"
-        android:id="@+id/potato_color"
+        android:id="@+id/vector_color"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/default_potato_color"
-        android:layout_marginStart="8dp"
+        app:cardBackgroundColor="@android:color/white"
         app:cardElevation="4dp"
-        android:layout_marginVertical="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         tools:context=".PotatoActivity">
 
     <LinearLayout
             android:foreground="?android:attr/selectableItemBackgroundBorderless"
-            android:onClick="startPotatoColorPicker"
+            android:onClick="startVectorColorPicker"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
         <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:text="@string/title_potato"
-                  android:id="@+id/potato_color_head"
+                  android:text="@string/title_vector"
+                  android:id="@+id/vector_color_head"
                   android:paddingTop="8dp"
                   android:paddingBottom="4dp"
-                  android:paddingHorizontal="16dp"
+                  android:paddingStart="16dp"
+                  android:paddingEnd="16dp"
                   android:textAppearance="@android:style/TextAppearance.Material.Title"
                   android:textStyle="bold"/>
 
         <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:text="@string/title_potato"
-                  android:paddingHorizontal="16dp"
-                  android:id="@+id/potato_color_subhead"
+                  android:text="@string/title_vector"
+                  android:paddingStart="16dp"
+                  android:paddingEnd="16dp"
+                  android:id="@+id/vector_color_subhead"
                   android:textAppearance="@android:style/TextAppearance.Material.Small"/>
 
         <com.google.android.material.chip.Chip
-                android:id="@+id/potato_system_accent"
+                android:id="@+id/vector_system_accent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginVertical="16dp"
-                android:onClick="setSystemAccentForPotato"
+                android:layout_margin="16dp"
+                android:onClick="setSystemAccentForVector"
                 android:alpha="0.5"
                 android:textColor="@color/bottom_bar_color"
                 app:chipBackgroundColor="@color/activity_background_color_dark"
