--- a/project/app/src/main/res/values/styles.xml
+++ b/project/app/src/main/res/values/styles.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <attr name="potato_header_color" format="color"/>
-    <attr name="posp_logo_color" format="color"/>
     <attr name="bottom_bar_color" format="color"/>
     <attr name="presets_card_color" format="color"/>
-    <attr name="icons_color" format="color"/>
+    <attr name="vectors_color" format="color"/>
     <attr name="presets_text_color" format="color"/>
+    <attr name="toolbar_icons_color" format="color"/>
 
     <!-- Base theme light. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
@@ -14,11 +13,9 @@
         <item name="android:colorPrimary">@color/system_bars_color</item>
         <item name="android:colorPrimaryDark">@color/system_bars_color</item>
         <item name="android:windowBackground">@android:color/white</item>
-        <item name="potato_header_color">@color/potato_header_color</item>
-        <item name="posp_logo_color">@color/posp_logo_color</item>
         <item name="presets_card_color">@color/bottom_bar_color</item>
         <item name="bottom_bar_color">@color/bottom_bar_color</item>
-        <item name="icons_color">@android:color/black</item>
+        <item name="vectors_color">@android:color/black</item>
         <item name="presets_text_color">@android:color/black</item>
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
     </style>
@@ -29,11 +26,9 @@
         <item name="android:colorPrimary">@color/system_bars_color_dark</item>
         <item name="android:colorPrimaryDark">@color/system_bars_color_dark</item>
         <item name="android:windowBackground">@color/activity_background_color_dark</item>
-        <item name="potato_header_color">@color/potato_header_color_dark</item>
-        <item name="posp_logo_color">@color/posp_logo_color_dark</item>
         <item name="presets_card_color">@color/presets_card_color_dark</item>
         <item name="bottom_bar_color">@color/bottom_bar_color_dark</item>
-        <item name="icons_color">@android:color/white</item>
+        <item name="vectors_color">@android:color/white</item>
         <item name="presets_text_color">@android:color/white</item>
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
     </style>
@@ -48,5 +43,14 @@
     <style name="WindowAnimationTransition">
         <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
         <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+    </style>
+
+    <!-- Style for toolbar -->
+    <style name="ToolbarStyle" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="toolbar_icons_color">@android:color/black</item>
+    </style>
+
+    <style name="ToolbarStyle.Dark" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="toolbar_icons_color">@android:color/white</item>
     </style>
 </resources>
